# test_agriness

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  pytest.ini
agriness/: manage.py
agriness/agriness/: asgi.py  settings.py  urls.py  wsgi.py
agriness/task/: admin.py  models.py  tests.py  views.py
agriness/task/migrations/: 0001_initial.py  0002_alter_task_finished_at.py
